Created HTML and JS files for Scope/Time/moved side projects into main repositories

--- a/Basic Javascript Projects/Project6_ternary_operators_constructors/index.html
+++ b/Basic Javascript Projects/Project6_ternary_operators_constructors/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Project 6 | Ternary Operators</title>
-        <script src="JS/main.js"></script>
+        <script src="JS/main.js"></script>                              <!--Calling JS script-->
     </head>
     <body>
-        <p>Riders must be at least 52 centimeteres tall to ride</p>
-        <input id="Height" value="52" />
-        <button onclick="Ride_Function()">Click here</button>
-        <p id="Ride"></p>
-        <button onclick="Clickiddy()">Clickiddy</button>
-        <p id="New_and_This"></p>
-        <button onclick="Click()">Click</button>
-        <p id="Nested_Function"></p>
+        <p>Riders must be at least 52 centimeteres tall to ride</p>     
+        <input id="Height" value="52" />                                <!--input for Height id-->
+        <button onclick="Ride_Function()">Click here</button>           <!--button to perform Ride_Function from JS-->
+        <p id="Ride"></p>                                               <!--P element for Ride id to populate from JS-->
+        <button onclick="Clickiddy()">Clickiddy</button>                <!--button to perform Clickiddy function from JS-->
+        <p id="New_and_This"></p>                                       <!--P element for New_and_This id to populate from JS-->
+        <button onclick="Click()">Click</button>                        <!--button to perform Click function from JS-->
+        <p id="Nested_Function"></p>                                    <!--P element for Nested_Function id to populate from JS-->
     </body>
 </html>
