--- a/Basic Javascript Projects/Project8_string_methods/index.html
+++ b/Basic Javascript Projects/Project8_string_methods/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Project 8 | String Methods</title>
-        <script src="JSS/main.js"></script>
+        <script src="JSS/main.js"></script>                                                                                 <!--Calls JS file-->
     </head>
     <body>
-        <button onclick="Full_sentence()">Best Videogame series?</button>
-        <p id="Lesgo"></p>
-        <button onclick="Slicendice()">What is the main protagonist's name in Legend Of Zelda?</button>
-        <p id="SayHisName"></p>
-        <button onclick="Slicendice2()">To make sure, what is the main protagonist's name in Legend Of Zelda?</button>
-        <p id="SayHisNameAgain"></p>
-        <button onclick="StringNumber()">How many Legend of Zelda Games have there been?</button>
-        <p id="GameNum"></p>
-        <button onclick="ThatsAlotOfData()">How much file size have these games used?</button>
-        <p id="DataSize"></p>
-        <button onclick="StillAlotOfData()">In Case you don't realize that's...</button>
-        <p id="DataSize2"></p>
+        <button onclick="Full_sentence()">Best Videogame series?</button>                                                   <!--button to call JS function-->
+        <p id="Lesgo"></p>                                                                                                  <!--p element with id to populate from JS-->
+        <button onclick="Slicendice()">What is the main protagonist's name in Legend Of Zelda?</button>                     <!--button to call JS function-->
+        <p id="SayHisName"></p>                                                                                             <!--p element with id to populate from JS-->
+        <button onclick="Slicendice2()">To make sure, what is the main protagonist's name in Legend Of Zelda?</button>      <!--button to call JS function-->
+        <p id="SayHisNameAgain"></p>                                                                                        <!--p element with id to populate from JS-->
+        <button onclick="StringNumber()">How many Legend of Zelda Games have there been?</button>                           <!--button to call JS function-->
+        <p id="GameNum"></p>                                                                                                <!--p element with id to populate from JS-->
+        <button onclick="ThatsAlotOfData()">How much file size have these games used?</button>                              <!--button to call JS function-->
+        <p id="DataSize"></p>                                                                                               <!--p element with id to populate from JS-->
+        <button onclick="StillAlotOfData()">In Case you don't realize that's...</button>                                    <!--button to call JS function-->
+        <p id="DataSize2"></p>                                                                                              <!--p element with id to populate from JS-->
     </body>
 </html>
